--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "rxjs": "~6.4.0",
+    "sweetalert": "^2.1.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
