--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.5.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~6.4.0",
     "sweetalert": "^2.1.2",
     "tslib": "^1.9.0",
