--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.5.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "ng-payment-card": "0.0.8",
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~6.4.0",
     "sweetalert": "^2.1.2",
